# stock_esp32

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  sdkconfig.defaults
.github/workflows/: deploy-econ-proxy.yml
app/: .gitignore  README.md  app.json  jest.setup.js  package-lock.json  package.json  tsconfig.json
app/scripts/: mock-esp32.js
app/src/: theme.ts
app/src/app/: _layout.tsx  dashboard.tsx  index.tsx  settings.tsx  watchlist.tsx
app/src/app/onboarding/: _layout.tsx  complete.tsx  keys.tsx  password.tsx  turn-on.tsx  wifi-list.tsx
app/src/components/: BackButton.tsx  Button.tsx  Card.tsx  Chip.tsx  IconBadge.tsx  LocationAutocomplete.tsx  Screen.tsx  ScreenMessage.tsx  SegmentedControl.tsx  StepHero.tsx  StepScaffold.tsx  TickerRow.tsx
app/src/lib/: device.tsx  discovery.test.ts  discovery.ts  esp32.test.ts  esp32.ts  format.test.ts  format.ts  geocode.test.ts  geocode.ts  store.test.ts  store.ts  watchlist.test.ts  watchlist.ts
app/src/onboarding/: OnboardingContext.tsx  flow.test.ts  flow.ts
components/board_io/: CMakeLists.txt  board_io.c  board_io.h
components/buttons/: CMakeLists.txt  buttons.c
components/buttons/include/: buttons.h
components/provisioning/: CMakeLists.txt  README.md  form_parse.c  form_parse.h  net_time.c  net_time.h  portal.html  prov_config.c  prov_config.h  prov_json.c  prov_json.h  prov_portal.c  prov_portal.h  prov_store.c  prov_store.h  prov_wifi.c  prov_wifi.h  provisioning.c  provisioning.h
components/provisioning/test/: run.sh  test_form_parse.c  test_json_build.c  test_prov_json.c  test_prov_select.c  tf.h  tf_main.c
components/stock_api/: CMakeLists.txt  idf_component.yml  stock_api.c  stock_api.h
components/stock_core/: CMakeLists.txt  Kconfig.projbuild  econ_parse.c  econ_service.c  http_port_esp.c  stock_api_json.c  stock_parse.c  stock_service.c  ui_econ.c  ui_font_black_26.c  ui_font_black_50.c  ui_font_mont_bold_16.c  ui_font_mont_bold_20.c  ui_font_mont_bold_46.c  ui_home.c  ui_icons.c  ui_stock.c  weather_parse.c  weather_service.c
components/stock_core/include/: econ_model.h  econ_parse.h  econ_service.h  http_port.h  stock_api_json.h  stock_api_model.h  stock_service.h  stock_text.h  ui_econ.h  ui_fonts.h  ui_home.h  ui_icons.h  ui_stock.h  weather_model.h  weather_parse.h  weather_service.h
components/stock_core/test/host/: CMakeLists.txt  test_api_json.c  test_econ.c  test_econ_service.c  test_service.c  test_weather.c
components/stock_core/test/host/fixtures/: fh_metric.json  fh_news.json  fh_quote.json  fmp_econ.json  om_forecast.json  om_geo.json
components/user_app/: CMakeLists.txt  user_app.cpp  user_app.h  user_app_control.h
docs/: app-control.md  board-hardware.md  econ-proxy-deployment.md  esp-idf-development.md  examples.md  graphics.md  pinout.md  references.md  simulator.md  stock-app.md  weather.md
docs/superpowers/plans/: 2026-06-18-home-econ-row.md
docs/superpowers/specs/: 2026-06-18-home-econ-row-design.md
firmware/lvgl_sim/: CMakeLists.txt  http_port_curl.c  lv_conf.h  main_sim.c  sim.sh
firmware/lvgl_v9_test/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
firmware/lvgl_v9_test/components/port_bsp/: display_bsp.cpp
firmware/lvgl_v9_test/components/provisioning/: CMakeLists.txt  README.md  form_parse.c  form_parse.h  json_build.c  json_build.h  portal.html  prov_config.c  prov_config.h  prov_portal.c  prov_store.c  prov_store.h  prov_wifi.c  provisioning.c
firmware/lvgl_v9_test/components/provisioning/test/: .gitignore  test_form_parse.c  test_prov_config.c  test_prov_tickers.c
firmware/lvgl_v9_test/components/stock_core/: CMakeLists.txt  Kconfig.projbuild  http_port_esp.c  stock_service.c  ui_stock.c  wifi_conn.c
firmware/lvgl_v9_test/components/stock_core/include/: stock_model.h  stock_parse.h  stock_service.h  ui_stock.h  wifi_conn.h
firmware/lvgl_v9_test/components/stock_core/test/host/: CMakeLists.txt  test_parse.c
firmware/lvgl_v9_test/components/stock_core/test/host/fixtures/: yf_chart.json
firmware/lvgl_v9_test/components/user_app/: CMakeLists.txt  user_app.cpp
firmware/lvgl_v9_test/main/: main.cpp
main/: CMakeLists.txt  main.cpp
sim/: CMakeLists.txt  http_port_curl.c  lv_conf.h  main_sim.c  sim.sh
tools/econ_proxy/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  econ_proxy.py  requirements.txt
